--- a/index.html
+++ b/index.html
@@ -51,5 +51,6 @@
   <footer class="footer">
     <small>Sitio diseñado por <a href="https://developerharo.com" target="_blank" rel="noopener">@developerharo</a></small>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
