markup html progress bar component

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </section>
   </header>
   <section id="inicio" class="home">    
-    <article class="hero-image" style="--hero-image: url('assets/hero-image-home.jpg'); --hero-attachment: fixed;">
+    <article class="hero-image" style="--hero-image: url('assets/christian-wiediger-WkfDrhxDMC8-unsplash.jpg'); --hero-attachment: fixed;">
       <aside class="hero-image-opacity" style="--hero-opacity-color: var(--black-alpha-color)";>
         <div class="hero-image-content">
           <h2 class="hero-image-title" style="--hero-text-color: var(--white-color);">
@@ -43,7 +43,64 @@
     </article>
   </section>
   <section id="acerca" class="about">
-    <h2>Acerca</h2>
+    <article>
+      <aside class="slogan">
+        <h1>José Haro</h1>
+        <h5>Desarrollador <i>Full Stack</i></h5>
+      </aside>
+      <p>Desde 2004 tengo experiencia en el área del desarrollo web y la educación. Imparto clases, conferencias y capacitaciones para personas, empresas, instituciones educativas y comunidades en Internet. </p>
+
+      <p>También colaboro en proyectos como Freelance FullStack. Estoy más orientado al Frontend, pero también hago Backend.</p>
+        
+      <p>Disfruto llevar a cabo la maquetación e interactividad de interfaces web, así como la optimización, para el buen posicionamiento y el rendimiento de carga de sitios y aplicaciones web.
+      
+      <p>También cuento con experiencia en el área de Social Media, Marketing de Contenidos y SEO.</p>
+      <div>
+        <a class="btn" href="https://wwww.google.com" target="_blank" rel="noopener">Descargar mi CV</a>
+      </div>
+    </article>
+    <article>
+      <img class="gray-scale" src="assets/haro.jpg" alt="joseharo">
+    </article>
+    <article>
+      <h2>Mis habilidades</h2>
+      <div class="progress">
+        <p>
+          <b>Desarrollo <i>Frontend</i></b>
+          <b>90%</b>
+        </p>
+        <progress value="90" min="0" max="100"></progress>
+      </div>
+      <div class="progress">
+        <p>
+          <b>Diseño<i>Web</i></b>
+          <b>85%</b>
+        </p>
+        <progress value="85" min="0" max="100"></progress>
+      </div>
+      <div class="progress">
+        <p>
+          <b><i>WPO</i> y <i>SEO</i></b>
+          <b>80%</b>
+        </p>
+        <progress value="80" min="0" max="100"></progress>
+      </div>
+      <div class="progress">
+        <p>
+          <b><i>Backend</i></b>
+          <b>95%</b>
+        </p>
+        <progress value="95" min="0" max="100"></progress>
+      </div>
+      <div class="progress">
+        <p>
+          <b><i>Social Media</i> y <i>Marketing</i> de contenidos</b>
+          <b>95%</b>
+        </p>
+        <progress value="95" min="0" max="100"></progress>
+      </div>
+
+    </article>
   </section>
   <section id="servicios" class="services">
     <h2>Servicios</h2>
