--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </section>
   </header>
   <section id="inicio" class="home">    
-    <article class="hero-image" style="--hero-image: url('assets/christian-wiediger-WkfDrhxDMC8-unsplash.jpg'); --hero-attachment: fixed;">
+    <article class="hero-image" style="--hero-image: url('assets/hero-image-home.jpg'); --hero-attachment: fixed;">
       <aside class="hero-image-opacity" style="--hero-opacity-color: var(--black-alpha-color)";>
         <div class="hero-image-content">
           <h2 class="hero-image-title" style="--hero-text-color: var(--white-color);">
@@ -42,9 +42,9 @@
       </aside>
     </article>
   </section>
-  <section id="acerca" class="about">
-    <article>
-      <aside class="slogan">
+  <section id="acerca" class="about section container full-lg-screen">
+    <article class="text-lg-right">
+      <aside class="text-center text-lg-right">
         <h1>José Haro</h1>
         <h5>Desarrollador <i>Full Stack</i></h5>
       </aside>
@@ -55,7 +55,7 @@
       <p>Disfruto llevar a cabo la maquetación e interactividad de interfaces web, así como la optimización, para el buen posicionamiento y el rendimiento de carga de sitios y aplicaciones web.
       
       <p>También cuento con experiencia en el área de Social Media, Marketing de Contenidos y SEO.</p>
-      <div>
+      <div class="text-center text-lg-left">
         <a class="btn" href="https://wwww.google.com" target="_blank" rel="noopener">Descargar mi CV</a>
       </div>
     </article>
@@ -63,7 +63,7 @@
       <img class="gray-scale" src="assets/haro.jpg" alt="joseharo">
     </article>
     <article>
-      <h2>Mis habilidades</h2>
+      <h2 class="text-center text-lg-left">Mis habilidades</h2>
       <div class="progress">
         <p>
           <b>Desarrollo <i>Frontend</i></b>
@@ -73,7 +73,7 @@
       </div>
       <div class="progress">
         <p>
-          <b>Diseño<i>Web</i></b>
+          <b>Diseño <i>Web</i></b>
           <b>85%</b>
         </p>
         <progress value="85" min="0" max="100"></progress>
