--- a/index.html
+++ b/index.html
@@ -141,72 +141,76 @@
     </div>
   </section>
   <section id="portafolio" class="portfolio section">
-    <a href="#trabajo-1" class="portfolio-card">
-      <img src="assets/portfolio-1.jpg" alt="Trabajo 1">
-      <aside class="portfolio-card-info">
-        <div>
-          <h3>Proyecto 1</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam laboriosam minima excepturi recusandae adipisci ipsa obcaecati perspiciatis temporibus autem ipsam?
-          </p>
-        </div>
-      </aside>
-    </a>
-    <a href="#trabajo-2" class="portfolio-card">
-      <img src="assets/portfolio-2.jpg " alt="Trabajo 2">
-      <aside class="portfolio-card-info">
-        <div>
-          <h3>Proyecto 2</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam laboriosam minima excepturi recusandae adipisci ipsa obcaecati perspiciatis temporibus autem ipsam?
-          </p>
-        </div>
-      </aside>
-    </a>
-    <a href="#trabajo-3" class="portfolio-card">
-      <img src="assets/portfolio-3.jpg" alt="Trabajo 3">
-      <aside class="portfolio-card-info">
-        <div>
-          <h3>Proyecto 3</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam laboriosam minima excepturi recusandae adipisci ipsa obcaecati perspiciatis temporibus autem ipsam?
-          </p>
-        </div>
-      </aside>
-    </a>
-    <a href="#trabajo-4" class="portfolio-card">
-      <img src="assets/portfolio-4.jpg" alt="Trabajo 4">
-      <aside class="portfolio-card-info">
-        <div>
-          <h3>Proyecto 4</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam laboriosam minima excepturi recusandae adipisci ipsa obcaecati perspiciatis temporibus autem ipsam?
-          </p>
-        </div>
-      </aside>
-    </a>
-    <a href="#trabajo-5" class="portfolio-card">
-      <img src="assets/portfolio-5.jpg" alt="Trabajo 5">
-      <aside class="portfolio-card-info">
-        <div>
-          <h3>Proyecto 5</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam laboriosam minima excepturi recusandae adipisci ipsa obcaecati perspiciatis temporibus autem ipsam?
-          </p>
-        </div>
-      </aside>
-    </a>
-    <a href="#trabajo-6" class="portfolio-card">
-      <img src="assets/portfolio-6.jpg" alt="Trabajo 6">
-      <aside class="portfolio-card-info">
-        <div>
-          <h3>Proyecto 6</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam laboriosam minima excepturi recusandae adipisci ipsa obcaecati perspiciatis temporibus autem ipsam?
-          </p>
-        </div>
-      </aside>
-    </a>
+    <div class="container">
+      <h2 class="section-title">Mis Trabajos</h2>
+      <a href="#trabajo-1" class="portfolio-card">
+        <img src="assets/portfolio-1.jpg" alt="Trabajo 1">
+        <aside class="portfolio-card-info">
+          <div>
+            <h3>Proyecto 1</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam laboriosam minima excepturi recusandae adipisci ipsa obcaecati perspiciatis temporibus autem ipsam?
+            </p>
+          </div>
+        </aside>
+      </a>
+      <a href="#trabajo-2" class="portfolio-card">
+        <img src="assets/portfolio-2.jpg " alt="Trabajo 2">
+        <aside class="portfolio-card-info">
+          <div>
+            <h3>Proyecto 2</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam laboriosam minima excepturi recusandae adipisci ipsa obcaecati perspiciatis temporibus autem ipsam?
+            </p>
+          </div>
+        </aside>
+      </a>
+      <a href="#trabajo-3" class="portfolio-card">
+        <img src="assets/portfolio-3.jpg" alt="Trabajo 3">
+        <aside class="portfolio-card-info">
+          <div>
+            <h3>Proyecto 3</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam laboriosam minima excepturi recusandae adipisci ipsa obcaecati perspiciatis temporibus autem ipsam?
+            </p>
+          </div>
+        </aside>
+      </a>
+      <a href="#trabajo-4" class="portfolio-card">
+        <img src="assets/portfolio-4.jpg" alt="Trabajo 4">
+        <aside class="portfolio-card-info">
+          <div>
+            <h3>Proyecto 4</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam laboriosam minima excepturi recusandae adipisci ipsa obcaecati perspiciatis temporibus autem ipsam?
+            </p>
+          </div>
+        </aside>
+      </a>
+      <a href="#trabajo-5" class="portfolio-card">
+        <img src="assets/portfolio-5.jpg" alt="Trabajo 5">
+        <aside class="portfolio-card-info">
+          <div>
+            <h3>Proyecto 5</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam laboriosam minima excepturi recusandae adipisci ipsa obcaecati perspiciatis temporibus autem ipsam?
+            </p>
+          </div>
+        </aside>
+      </a>
+      <a href="#trabajo-6" class="portfolio-card">
+        <img src="assets/portfolio-6.jpg" alt="Trabajo 6">
+        <aside class="portfolio-card-info">
+          <div>
+            <h3>Proyecto 6</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam laboriosam minima excepturi recusandae adipisci ipsa obcaecati perspiciatis temporibus autem ipsam?
+            </p>
+          </div>
+        </aside>
+      </a>
+    </div>
+   
   </section>
   <section id="testimonios" class="testimonials">
     <h2>Testimonios</h2>
