--- a/index.html
+++ b/index.html
@@ -383,7 +383,12 @@
     <article class="hero-image" style="--hero-image: url('assets/hero-image-customers.jpg'); --hero-attachment: scroll;">
       <aside class="hero-image-opacity" style="--hero-opacity-color: var(--white-alpha-color)";>
         <div class="hero-image-content">
-          
+          <div class="container">
+            <h2 class="section-title">Mis clientes dicen</h2>
+            <article class="carousel">
+              <h2>Carrusel</h2>
+            </article>
+          </div>
         </div>
       </aside>
     </article>
