--- a/index.html
+++ b/index.html
@@ -390,36 +390,38 @@
               <input type="radio" name="slides" id="slide-2">
               <input type="radio" name="slides" id="slide-3">
               <input type="radio" name="slides" id="slide-4">
+              <ul class="slides">
+                <li class="slide">
+                  <img class="avatar" src="assets/customer-1.jpg" alt="Cliente 1">
+                  <blockquote>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, animi iure minima ratione expedita provident! Expedita voluptates beatae placeat consequuntur, eaque praesentium atque dicta architecto odio. Mollitia inventore quisquam voluptatibus."</blockquote>
+                  <h3 class="text-first-color">NOMBRE DEL CLIENTE</h3>
+                  <h6>Puesto del Cliente</h6>
+                </li>             
+                <li class="slide">
+                  <img class="avatar" src="assets/customer-2.jpg" alt="Cliente 2">
+                  <blockquote>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, animi iure minima ratione expedita provident! Expedita voluptates beatae placeat consequuntur, eaque praesentium atque dicta architecto odio. Mollitia inventore quisquam voluptatibus."</blockquote>
+                  <h3 class="text-first-color">NOMBRE DEL CLIENTE</h3>
+                  <h6>Puesto del Cliente</h6>
+                </li>                   
+                <li class="slide">
+                  <img class="avatar" src="assets/customer-1.jpg" alt="Cliente 1">
+                  <blockquote>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, animi iure minima ratione expedita provident! Expedita voluptates beatae placeat consequuntur, eaque praesentium atque dicta architecto odio. Mollitia inventore quisquam voluptatibus."</blockquote>
+                  <h3 class="text-first-color">NOMBRE DEL CLIENTE</h3>
+                  <h6>Puesto del Cliente</h6>
+                </li>             
+                <li class="slide">
+                  <img class="avatar" src="assets/customer-2.jpg" alt="Cliente 2">
+                  <blockquote>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, animi iure minima ratione expedita provident! Expedita voluptates beatae placeat consequuntur, eaque praesentium atque dicta architecto odio. Mollitia inventore quisquam voluptatibus."</blockquote>
+                  <h3 class="text-first-color">NOMBRE DEL CLIENTE</h3>
+                  <h6>Puesto del Cliente</h6>
+                </li>
+              </ul>
               <aside class="slides-nav">
                 <label for="slide-1" id="dot-1"></label>
                 <label for="slide-2" id="dot-2"></label>
                 <label for="slide-3" id="dot-3"></label>
                 <label for="slide-4" id="dot-4"></label>
               </aside>
-              <ul class="slides">
-                <li class="slide">
-                  <img src="assets/customer-1.jpg" alt="Cliente 1">
-                  <blockquote>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, animi iure minima ratione expedita provident! Expedita voluptates beatae placeat consequuntur, eaque praesentium atque dicta architecto odio. Mollitia inventore quisquam voluptatibus."</blockquote>
-                  <h3>NOMBRE DEL CLIENTE</h3>
-                  <h6>Puesto del Cliente</h6>
-                  <li class="slide">
-                    <img src="assets/customer-2.jpg" alt="Cliente 2">
-                    <blockquote>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, animi iure minima ratione expedita provident! Expedita voluptates beatae placeat consequuntur, eaque praesentium atque dicta architecto odio. Mollitia inventore quisquam voluptatibus."</blockquote>
-                    <h3>NOMBRE DEL CLIENTE</h3>
-                    <h6>Puesto del Cliente</h6>
-                </li>
-                <li class="slide">
-                  <img src="assets/customer-1.jpg" alt="Cliente 1">
-                  <blockquote>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, animi iure minima ratione expedita provident! Expedita voluptates beatae placeat consequuntur, eaque praesentium atque dicta architecto odio. Mollitia inventore quisquam voluptatibus."</blockquote>
-                  <h3>NOMBRE DEL CLIENTE</h3>
-                  <h6>Puesto del Cliente</h6>
-                  <li class="slide">
-                    <img src="assets/customer-2.jpg" alt="Cliente 2">
-                    <blockquote>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, animi iure minima ratione expedita provident! Expedita voluptates beatae placeat consequuntur, eaque praesentium atque dicta architecto odio. Mollitia inventore quisquam voluptatibus."</blockquote>
-                    <h3>NOMBRE DEL CLIENTE</h3>
-                    <h6>Puesto del Cliente</h6>
-                </li>                
-              </ul>
             </article>
           </div>
         </div>
